--- a/app/views/dashboard_templates/to.html.erb
+++ b/app/views/dashboard_templates/to.html.erb
@@ -1,13 +1,5 @@
-<h1>Convert <%= @from %> to USD </h1>
+<h1>Convert <%= @from %> to <%= @to %> </h1>
 
-<p>Go <a href="/forex">back</a>.</p>
+1 <%= @from %> equals <%= @conversion_rate %> <%= @to %>.
 
-<ul>
-  <% @currencies.each do |currency| %>
-    <li>
-      <a href="/forex/<%= @from %>/<%= currency %>">
-        Convert 1 <%= @from %> to <%= currency %>...
-      </a>
-    </li>
-  <% end %>
-</ul>
+<p>Go <a href="/forex/<%= @from %>">back</a>.</p>
